<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpeechTimer</string>
    <string name="action_settings">Settings</string>
    <string name="speech">Speech</string>
    <string name="evaluation">Evaluation</string>
    <string name="table">Table topic</string>
    <string name="WholeMeeting">Whole Meeting</string>
    <string name="title_activity_timer">Timer</string>
    <string name="restart">Restart</string>
    <string name="stop">Stop</string>
    <string name="next_presenter">Who is going to speak?</string>
    <string name="speech_max_time">Speech Maximum Time</string>
    <string name="QuickTimer">Quick Timer</string>
    <string name="NoRecentSpeakers">No information of recent speakers</string>
    <string name="DeleteAll">Delete All</string>
    <string name="ScaleHelp">Touch and pinch to scale timer!</string>
    <string-array name="languages">
        <item >English</item>
        <item >한국어</item>
    </string-array>
    <string name="language">Language</string>
    <string-array name="langcodes">
        <item >en</item>
        <item >ko</item>
    </string-array>
    <string-array name="vibrationStr">
        <item >No Vibration</item>
        <item >Very Soft</item>
        <item >Soft</item>
        <item >Normal</item>
        <item >Strong</item>
        <item >Very Strong</item>
    </string-array>
    <string-array name="durations">
        <item>0</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
    </string-array>
    <string name="helpVideo">Help Video</string>
    <string name="vibrationSetTitle">Enable vibration</string>
    <string name="vibStrengthSummary">Intensity of vibration on min, mid or max time</string>
    <string name="gyrSetTitle">Show G, Y or R in Timer</string>
    <string name="gyrSummaryOn">Show G, Y or R for easy recognition of colors in timer</string>
    <string name="gyrSummaryOff">No G, Y or R in timer</string>
    <string name="timerSetTittle">Show time in timer</string>
    <string name="timerSummaryOn">Show time in timer</string>
    <string name="timerSummaryOff">No time in timer</string>
    <string name="removeEntryDlgTitle">Remove this report entry?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clearReportDlgTitle">Clear Timer\'s reprt?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="speakerName">Speaker\'s Name</string>





    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="min">min</string>
    <string name="to">to</string>
    <string name="enterName">Enter Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Vibration Settings -->
    <string name="pref_vibration_strength">Vibration Intensity</string>

    <!-- Timer Background-->
    <string name="whiteTimerBG">White Timer Background</string>
    <string name="blackTimerBGSummarry">Normal timer background will be black</string>
    <string name="whiteTimerBGSummarry">Normal  timer background will be white</string>

    <!-- Snag bar -->
    <string name="entryRemovedNoti">Entry was removed from the report.</string>

    <!--- only landscape setting -->
    <string name="onlyLandscape">Run this app only in landscape mode</string>
    <string name="onlyLandscapeOff">App will change orientation with device orientation</string>
    <string name="onlyLandscapeOn">App will always run in landscape mode</string>
</resources>
